added service worker  files

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
                             <div class="main">
                                 <img class="main-icon view" src="./icons/unknown.png" alt="">
                                 <h2 class="main-season season">N/R</h2>
+                                <h3 class="safe"></h3>
                             </div>
                             <h3 class="main-date temperature">0</h3>
                             <h2 class="main-degree">&deg;C</h2>
